--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,1 +1,1 @@
-#loading-progress{display:block;background-color:#f5f5f5;height:2px;margin:1.5rem 0;border:none}.is-discord{background-color:#7289da!important;color:#fff!important}
+#loading-progress{display:block;background-color:#f5f5f5;height:2px;margin:1.5rem 0;border:none}.app-modal-icon-left{margin-right:12px}.is-discord{background-color:#7289da!important;color:#fff!important}
