--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,10 @@
   margin-right: 12px;
 }
 
+.category-name-left {
+  padding-left: 4px !important;
+}
+
 .is-discord {
   background-color: #7289da !important;
   color: #fff !important;
