--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,13 +1,10 @@
-#loading-progress {
-  display: block;
-  background-color: #f5f5f5;
-  height: 2px;
-  margin: 1.5rem 0;
-  border: none
-}
-
 .app-modal-icon-left {
   margin-right: 12px;
+}
+
+.app-modal-screenshots {
+  overflow: auto;
+  white-space: nowrap;
 }
 
 .category-name-left {
