:rocket: Begin UI revamp.

--- a/docs/assets/css/index.css
+++ b/docs/assets/css/index.css
@@ -1,1 +1,1 @@
-.app-modal-icon-left{margin-right:12px}.app-modal-screenshots{overflow:auto;white-space:nowrap}.category-name-left{padding-left:4px!important}.is-discord{background-color:#7289da!important;color:#fff!important}#link-ghost{display:none}
+.app-modal-icon-left{margin-right:12px}.app-modal-screenshots{overflow:auto;white-space:nowrap}.category-name-left{padding-left:4px!important}
