:rocket: Complete refactor.

--- a/docs/assets/css/index.css
+++ b/docs/assets/css/index.css
@@ -1,1 +1,1 @@
-.app-modal-icon-left{margin-right:12px}.app-modal-screenshots{overflow:auto;white-space:nowrap}.category-name-left{padding-left:4px!important}
+.app-modal-icon-left{margin-right:12px}.app-modal-screenshots{overflow:auto;white-space:nowrap}.is-clamped{overflow:hidden;display:-webkit-box;-webkit-line-clamp:1;-webkit-box-orient:vertical}
